variables.Variables.scala.error
Compilation error:
Variables:9: error: not found: value pickupBuggle
pickupBuggle();
^Variables:16: error: not found: value dropBuggle
dropBuggle(); 
^