variables.Variables.scala.code

var steps:Int = 0;

while(!isOverBaggle()) {
  steps+=1;
  forward();
}

pickupBuggle();

while (steps > 0) {
  steps-=1;
  backward();
}

dropBuggle();